# ptui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NEWS.md  README-TURBOJPEG.md  README.md  build.rs  build_and_run.sh  log-many.txt  log-many2.txt  log.txt  patch-aur-pkgbuild.sh  ratatui_upgrade_notes.md  release-mac.sh  release.sh  release_build_and_run.sh  update-ptui-homebrew.sh
locales/de/: main.ftl
locales/en/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
locales/ja/: main.ftl
locales/zh/: main.ftl
src/: app.rs  config.rs  converter.rs  fast_image_loader.rs  file_browser.rs  lib.rs  localization.rs  main.rs  preview.rs  test_utils.rs  transitions.rs  ui.rs  viuer_protocol.rs
tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
